# PuzzledChess

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  main.cpp
assets/: Ashes.rgs  randLine.cpp
headers/: Ashes.h  animate.h  constant.h  database.h  gui.h  gui_menu.h  menu.h  sound.h
